# adk-samples

./: .gitignore
python/agents/podcast_transcript_agent/: .gitignore  README.md  pyproject.toml
python/agents/podcast_transcript_agent/podcast_transcript_agent/: agent.py  prompt.py
python/agents/podcast_transcript_agent/podcast_transcript_agent/models/: podcast_plan.py  podcast_topics.py  podcast_transcript.py
python/agents/podcast_transcript_agent/podcast_transcript_agent/sub_agents/podcast_episode_planner/: __init__.py  agent.py  prompt.py
python/agents/podcast_transcript_agent/podcast_transcript_agent/sub_agents/podcast_topics/: __init__.py  agent.py  prompt.py
python/agents/podcast_transcript_agent/podcast_transcript_agent/sub_agents/podcast_transcript_writer/: __init__.py  agent.py  prompt.py
python/agents/podcast_transcript_agent/tests/: test_agents.py
